Fixes making the URL Input boxes for the link shortener too small and adds a copy button to the shortened link field to copy directly to clipboard.

--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -79,7 +79,7 @@
     color: @primary;
   }
 
-  input {
+  .groll {
     width: 6%;
     margin: 5px;
     text-align: center;
